--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abradán - Business Intelligence & Data Analysis</title>
+    <title>Abrahan Chaurio - Business Intelligence & Data Analysis</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
 </head>
 
 <body>
@@ -18,9 +23,9 @@
 
     <main>
 
-        <section id="home-about" class="text-center"> <h1 class="main-headline">Abradán</h1>
+        <section id="home-about" class="text-center"> <h1 class="main-headline">Abradang</h1>
 
-            <p class="sub-headline">Transformando Datos en Decisiones Estratégicas | Business Intelligence & Data Analysis</p>
+            <p class="sub-headline">Business Intelligence & Data Analysis | Transformando Datos en Decisiones Estratégicas </p>
 
             <div class="bio-text">
                 <p>
@@ -46,15 +51,15 @@
             <h2>Contacto</h2>
             <p class="text-center">¿Interesado/a en colaborar o saber más? Conectemos.</p>
             <div class="contact-links">
-                 <a href="tu-enlace-de-linkedin" target="_blank" class="contact-button">LinkedIn</a>
-                 <a href="mailto:tu-email@ejemplo.com" class="contact-button">Enviar Email</a>
+                 <a href="https://www.linkedin.com/in/abrahanchaurio/" target="_blank" class="contact-button">LinkedIn</a>
+                 <a href="abrahanco@gmail.com" class="contact-button">Enviar Email</a>
                  </div>
         </section>
 
     </main>
 
     <footer>
-        <p>&copy; 2025 Abradán. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Abradang. Todos los derechos reservados.</p>
          </footer>
 
 </body>
