--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p class="text-center">¿Interesado/a en colaborar o saber más? Conectemos.</p>
             <div class="contact-links">
                  <a href="https://www.linkedin.com/in/abrahanchaurio/" target="_blank" class="contact-button">LinkedIn</a>
-                 <a href="abrahanco@gmail.com" class="contact-button">Enviar Email</a>
+                 <a href="mailto:abrahanco@gmail.com" class="contact-button">Enviar Email</a>
                  </div>
         </section>
 
