--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main>
 
-        <section id="home-about" class="text-center"> <h1 class="main-headline">Abradang</h1>
+        <section id="home-about" class="text-center"> <h1 class="main-headline">Abrahan Chaurio</h1>
 
             <p class="sub-headline">Business Intelligence & Data Analysis | Transformando Datos en Decisiones Estratégicas </p>
 
