--- a/index.html
+++ b/index.html
@@ -23,27 +23,37 @@
 
     <main>
 
-        <section id="home-about" class="text-center"> <h1 class="main-headline">Abrahan Chaurio</h1>
-
+        <section id="home-about" class="text-center">
+            <h1 class="main-headline">Abrahan Chaurio</h1>
             <p class="sub-headline">Business Intelligence & Data Analysis | Transformando Datos en Decisiones Estratégicas </p>
-
             <div class="bio-text">
                 <p>
                     ¡Hola! Soy Abrahán, un apasionado del Business Intelligence con formación en Administración y experiencia técnica. Mi objetivo es claro: convertir datos complejos en insights claros y accionables que impulsen el crecimiento y la eficiencia.
                 </p>
                 <p>
                     Mi viaje desde la administración hasta el análisis de datos, pasando por la informática, me ha dado una perspectiva única para entender tanto las necesidades del negocio como las soluciones tecnológicas. Creo en la toma de decisiones basada en evidencia y en el poder de una buena visualización para contar historias con datos.
-                    </p>
+                </p>
             </div>
-
             <a href="#portfolio" class="cta-button">Ver mis Proyectos</a>
-
         </section>
 
         <section id="portfolio">
             <h2>Portafolio BI</h2>
-            <p class="text-center">Aquí mostraremos tus proyectos embebidos de Power BI.</p>
+            <p class="text-center portfolio-intro">
+                Aquí puedes explorar algunos de los proyectos en los que he trabajado, demostrando cómo aplico el análisis de datos y la visualización para generar valor.
+            </p>
+
             <div class="portfolio-grid">
+
+                <div class="portfolio-item">
+                    <h3>Análisis de Ventas Interactivo</h3> <p class="portfolio-description">
+                        Este informe interactivo analiza las tendencias de ventas, identifica los productos más rentables y segmenta a los clientes por región. Permite explorar los datos de forma dinámica para obtener insights rápidos.
+                        </p>
+                    <div class="powerbi-embed-container">
+                        <p><strong><iframe title="Primer ReportePBI" src="https://app.powerbi.com/view?r=eyJrIjoiN2ZiZDA0ZGEtZWQ5Yy00Y2U3LWIyODYtYmE3NmUwMWMyZTc5IiwidCI6IjE4OGM5ODE0LWNjYTYtNGM3NS1iNDVlLWE2YmE1NzZlZmI0NCJ9" frameborder="0" allowFullScreen="true"></iframe></strong></p>
+                        </div>
+                </div>
+
                 </div>
         </section>
 
@@ -51,16 +61,19 @@
             <h2>Contacto</h2>
             <p class="text-center">¿Interesado/a en colaborar o saber más? Conectemos.</p>
             <div class="contact-links">
-                 <a href="https://www.linkedin.com/in/abrahanchaurio/" target="_blank" class="contact-button">LinkedIn</a>
+                 <a href="https://www.linkedin.com/in/abrahanchaurio/" target="_blank" rel="noopener noreferrer" class="contact-button">LinkedIn</a>
                  <a href="mailto:abrahanco@gmail.com" class="contact-button">Enviar Email</a>
-                 </div>
+            </div>
         </section>
 
     </main>
 
     <footer>
-        <p>&copy; 2025 Abradang. Todos los derechos reservados.</p>
-         </footer>
+        <p>&copy; <span id="current-year"></span> Abrahan Chaurio. Todos los derechos reservados.</p>
+        <script>
+            document.getElementById('current-year').textContent = new Date().getFullYear();
+        </script>
+    </footer>
 
 </body>
 
