Añadir foto, habilidades y enlaces sociales

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
     <main>
 
         <section id="home-about" class="text-center">
+            <img src="Bondi11.png" alt="Foto de Abrahan Chaurio" class="profile-pic">
+
             <h1 class="main-headline">Abrahan Chaurio</h1>
             <p class="sub-headline">Business Intelligence & Data Analysis | Transformando Datos en Decisiones Estratégicas </p>
+
             <div class="bio-text">
                 <p>
                     ¡Hola! Soy Abrahán, un apasionado del Business Intelligence con formación en Administración y experiencia técnica. Mi objetivo es claro: convertir datos complejos en insights claros y accionables que impulsen el crecimiento y la eficiencia.
@@ -34,6 +37,20 @@
                     Mi viaje desde la administración hasta el análisis de datos, pasando por la informática, me ha dado una perspectiva única para entender tanto las necesidades del negocio como las soluciones tecnológicas. Creo en la toma de decisiones basada en evidencia y en el poder de una buena visualización para contar historias con datos.
                 </p>
             </div>
+
+            <div class="skills-section">
+                <h3 class="skills-headline">Áreas de Expertise</h3>
+                <ul class="skills-list">
+                    <li class="skill-item">Power BI (DAX, Power Query)</li>
+                    <li class="skill-item">SQL</li>
+                    <li class="skill-item">Análisis de Datos</li>
+                    <li class="skill-item">Visualización de Datos</li>
+                    <li class="skill-item">Data Storytelling</li>
+                    <li class="skill-item">Resolución de Problemas</li>
+                    <li class="skill-item">Comunicación Efectiva</li>
+                    </ul>
+            </div>
+
             <a href="#portfolio" class="cta-button">Ver mis Proyectos</a>
         </section>
 
@@ -42,19 +59,17 @@
             <p class="text-center portfolio-intro">
                 Aquí puedes explorar algunos de los proyectos en los que he trabajado, demostrando cómo aplico el análisis de datos y la visualización para generar valor.
             </p>
-
             <div class="portfolio-grid">
-
                 <div class="portfolio-item">
-                    <h3>Análisis de Ventas Interactivo</h3> <p class="portfolio-description">
+                    <h3>Análisis de Ventas Interactivo</h3>
+                    <p class="portfolio-description">
                         Este informe interactivo analiza las tendencias de ventas, identifica los productos más rentables y segmenta a los clientes por región. Permite explorar los datos de forma dinámica para obtener insights rápidos.
-                        </p>
+                    </p>
                     <div class="powerbi-embed-container">
-                        <p><strong><iframe title="Primer ReportePBI" src="https://app.powerbi.com/view?r=eyJrIjoiN2ZiZDA0ZGEtZWQ5Yy00Y2U3LWIyODYtYmE3NmUwMWMyZTc5IiwidCI6IjE4OGM5ODE0LWNjYTYtNGM3NS1iNDVlLWE2YmE1NzZlZmI0NCJ9" frameborder="0" allowFullScreen="true"></iframe></strong></p>
-                        </div>
+                        <iframe title="Primer ReportePBI" src="https://app.powerbi.com/view?r=eyJrIjoiN2ZiZDA0ZGEtZWQ5Yy00Y2U3LWIyODYtYmE3NmUwMWMyZTc5IiwidCI6IjE4OGM5ODE0LWNjYTYtNGM3NS1iNDVlLWE2YmE1NzZlZmI0NCJ9" frameborder="0" allowFullScreen="true"></iframe>
+                    </div>
                 </div>
-
-                </div>
+            </div>
         </section>
 
         <section id="contact">
@@ -62,13 +77,19 @@
             <p class="text-center">¿Interesado/a en colaborar o saber más? Conectemos.</p>
             <div class="contact-links">
                  <a href="https://www.linkedin.com/in/abrahanchaurio/" target="_blank" rel="noopener noreferrer" class="contact-button">LinkedIn</a>
-                 <a href="mailto:abrahanco@gmail.com" class="contact-button">Enviar Email</a>
-            </div>
+                 <a href="mailto:chaurio@abradang.com" class="contact-button">Enviar Email</a> </div>
         </section>
 
     </main>
 
     <footer>
+        <div class="social-icons">
+            <a href="https://www.linkedin.com/in/abrahanchaurio/" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="LinkedIn">LinkedIn</a>
+            <a href="https://www.instagram.com/abradang/" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="Instagram">Instagram</a>
+            <a href="https://www.facebook.com/Abrahandang/" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="Facebook">Facebook</a>
+            <a href="https://www.tiktok.com/@abradang" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="Tiktok">Tiktok</a>
+            <a href="https://github.com/abradang" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="GitHub">GitHub</a>                      
+        </div>
         <p>&copy; <span id="current-year"></span> Abrahan Chaurio. Todos los derechos reservados.</p>
         <script>
             document.getElementById('current-year').textContent = new Date().getFullYear();
