Usar iconos sociales PNG en footer

--- a/index.html
+++ b/index.html
@@ -31,23 +31,28 @@
 
             <div class="bio-text">
                 <p>
-                    ¡Hola! Soy Abrahán, un apasionado del Business Intelligence con formación en Administración y experiencia técnica. Mi objetivo es claro: convertir datos complejos en insights claros y accionables que impulsen el crecimiento y la eficiencia.
+                    ¡Hola! Soy Abrahan Chaurio (Abradang). Hace más de 18 años, SQL me mostró el poder de transformar datos en valor, pero mi camino para encontrar el encaje perfecto fue una exploración constante entre la tecnología (Informática) y el negocio (Administración, Emprendimiento).
                 </p>
                 <p>
-                    Mi viaje desde la administración hasta el análisis de datos, pasando por la informática, me ha dado una perspectiva única para entender tanto las necesidades del negocio como las soluciones tecnológicas. Creo en la toma de decisiones basada en evidencia y en el poder de una buena visualización para contar historias con datos.
+                    El momento decisivo llegó durante una crisis de datos: tras días de análisis exhaustivo, no solo recuperamos información crítica (y millones para el negocio), sino que entendí mi verdadera vocación. El Business Intelligence era el puente que buscaba: donde la tecnología sirve al negocio, los datos cuentan historias y los problemas se convierten en oportunidades de mejora.
+                </p>
+                <p>
+                    Hoy, como **"Catalizador Inquebrantable"**, aplico esa pasión y mi experiencia diversa para convertir datos complejos en insights claros y accionables. Combino el rigor técnico con una visión estratégica y una mentalidad de mejora continua. Creo en la acción, en abrir puertas y en generar un impacto que va más allá de los reportes. ¡Bienvenido/a a mi Forja, donde las ideas y los datos toman forma!
                 </p>
             </div>
 
             <div class="skills-section">
                 <h3 class="skills-headline">Áreas de Expertise</h3>
                 <ul class="skills-list">
-                    <li class="skill-item">Power BI (DAX, Power Query)</li>
-                    <li class="skill-item">SQL</li>
-                    <li class="skill-item">Análisis de Datos</li>
-                    <li class="skill-item">Visualización de Datos</li>
+                    <li class="skill-item">Microsoft Power BI (DAX, Power Query)</li>
+                    <li class="skill-item">SQL (Debugging & Optimización)</li>
+                    <li class="skill-item">Business Intelligence</li>
+                    <li class="skill-item">Análisis y Visualización de Datos</li>
                     <li class="skill-item">Data Storytelling</li>
-                    <li class="skill-item">Resolución de Problemas</li>
-                    <li class="skill-item">Comunicación Efectiva</li>
+                    <li class="skill-item">Excel Avanzado (Macros, Power Query)</li>
+                    <li class="skill-item">Resolución de Problemas Críticos</li>
+                    <li class="skill-item">Adaptabilidad y Resiliencia</li>
+                    <li class="skill-item">Comunicación Estratégica</li>
                     </ul>
             </div>
 
@@ -84,11 +89,21 @@
 
     <footer>
         <div class="social-icons">
-            <a href="https://www.linkedin.com/in/abrahanchaurio/" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="LinkedIn">LinkedIn</a>
-            <a href="https://www.instagram.com/abradang/" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="Instagram">Instagram</a>
-            <a href="https://www.facebook.com/Abrahandang/" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="Facebook">Facebook</a>
-            <a href="https://www.tiktok.com/@abradang" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="Tiktok">Tiktok</a>
-            <a href="https://github.com/abradang" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="GitHub">GitHub</a>                      
+            <a href="https://www.linkedin.com/in/abrahanchaurio/" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="LinkedIn">
+                <img src="icons/linkedin1.png" alt="LinkedIn">
+            </a>
+            <a href="https://www.instagram.com/abradang/" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="Instagram">
+                <img src="icons/instagram1.png" alt="Instagram">
+            </a>
+            <a href="https://www.facebook.com/Abrahandang/" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="Facebook">
+                <img src="icons/facebook1.png" alt="Facebook">
+            </a>
+            <a href="https://www.tiktok.com/@abradang" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="Tiktok">
+                <img src="icons/tiktok1.png" alt="TikTok">
+            </a>
+            <a href="https://github.com/abradang" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="GitHub">
+                <img src="icons/github1.png" alt="GitHub">
+            </a>
         </div>
         <p>&copy; <span id="current-year"></span> Abrahan Chaurio. Todos los derechos reservados.</p>
         <script>
