Acualizar foto y index

--- a/index.html
+++ b/index.html
@@ -116,14 +116,11 @@
         <div class="social-icons">
             <a href="https://www.linkedin.com/in/abrahanchaurio/" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="LinkedIn"><img src="icons/linkedin-icon.png" alt="LinkedIn"></a>
             <a href="https://www.instagram.com/abradang/" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="Instagram"><img src="icons/instagram-icon.png" alt="Instagram"></a>
-            <a href="https://www.facebook.com/Abrahandang/" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="Facebook"><img src="icons/facebook-icon.png" alt="Facebook"></a>
+            <a href="https://www.facebook.com/abradang/" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="Facebook"><img src="icons/facebook-icon.png" alt="Facebook"></a>
             <a href="https://www.tiktok.com/@abradang" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="Tiktok"><img src="icons/tiktok-icon.png" alt="TikTok"></a>
             <a href="https://github.com/abradang" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="GitHub"><img src="icons/github-icon.png" alt="GitHub"></a>
         </div>
         <p>&copy; <span id="current-year"></span> Abrahan Chaurio. Todos los derechos reservados.</p>
-        <div class="attribution">
-             Icons made by <a href="https://www.freepik.com" title="Freepik" target="_blank" rel="noopener noreferrer">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a>
-        </div>
     </footer>
 
     <script>
