--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
 <body>
 
-    <<header>
+    <header>
         <div class="header-container">
             <nav class="main-nav" aria-label="Navegación principal">
                 <ul>
                     <li><a href="#home-about">Acerca de mí</a></li>
                     <li><a href="#portfolio">Proyectos</a></li>
                     <li><a href="#contact">Contacto</a></li>
-                    <li><a href="Abrahan_Chaurio_CV.pdf" download class="cv-button">Descargar CV</a></li>
+                    <li><a href="Abrahan_Chaurio_CV.pdf" download>Descargar CV</a></li>
                 </ul>
             </nav>
     
@@ -69,15 +69,15 @@
             <div class="skills-section">
                 <h3 class="skills-headline">Áreas de Expertise</h3>
                 <ul class="skills-list">
-                    <li class="skill-item">Microsoft Power BI (DAX, Power Query)</li>
-                    <li class="skill-item">SQL (Debugging & Optimización)</li>
-                    <li class="skill-item">Business Intelligence</li>
-                    <li class="skill-item">Análisis y Visualización de Datos</li>
-                    <li class="skill-item">Data Storytelling</li>
-                    <li class="skill-item">Excel Avanzado (Macros, Power Query)</li>
-                    <li class="skill-item">Resolución de Problemas Críticos</li>
-                    <li class="skill-item">Adaptabilidad y Resiliencia</li>
-                    <li class="skill-item">Comunicación Estratégica</li>
+                    <a href="https://platzi.com/p/Abrahanco/curso/10200-powerbi/diploma/detalle/" target="_blank" rel="noopener noreferrer" class="contact-button">Microsoft Power BI (Power Pivor, Power Query)</a>
+                    <a href="https://platzi.com/p/Abrahanco/curso/11324-dbsql/diploma/detalle/" target="_blank" rel="noopener noreferrer" class="contact-button">SQL (Debugging & Optimización)</a>
+                    <a href="https://platzi.com/p/Abrahanco/curso/2359-business-intelligence/diploma/detalle/" target="_blank" rel="noopener noreferrer"class="contact-button">Business Intelligence</a>
+                    <a href="https://platzi.com/p/Abrahanco/curso/11124-visualizacion-datos-bi/diploma/detalle/" target="_blank" rel="noopener noreferrer"class="contact-button">Storytelling y Visualización de Datos</a>
+                    <a href="https://platzi.com/p/Abrahanco/curso/4822-excel-avanzado-datos/diploma/detalle/" target="_blank" rel="noopener noreferrer"class="contact-button">Excel Avanzado (Macros, Power Query)</a>
+                    <a href="https://platzi.com/p/Abrahanco/curso/11324-dbsql/diploma/detalle/" target="_blank" rel="noopener noreferrer"class="contact-button">Analisis y Modelado de Datos con DAX para POwer BI</a>
+                    <a class="contact-button">Resolución de Problemas Críticos</a>
+                    <a class="contact-button">Adaptabilidad y Resiliencia</a>
+                    <a class="contact-button">Comunicación Estratégica</a>
                 </ul>
             </div>
             <a href="#portfolio" class="cta-button">Ver mis Proyectos</a>
