Acualizar style y index

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <section id="portfolio" class="section-padding">
             <h2>Portafolio BI</h2>
-            <p class="text-center portfolio-intro">
+            <p class="bio-text">
                 Aquí puedes explorar algunos de los proyectos en los que he trabajado, demostrando cómo aplico el análisis de datos y la visualización para generar valor.
             </p>
             <div class="portfolio-grid">
