--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li><a href="#home-about" data-lang-es="Acerca de mí" data-lang-en="About Me">Acerca de mí</a></li>
                     <li><a href="#portfolio" data-lang-es="Proyectos" data-lang-en="Projects">Proyectos</a></li>
                     <li><a href="#contact" data-lang-es="Contacto" data-lang-en="Contact">Contacto</a></li>
-                    <li><a href="Abrahan_Chaurio_CV.pdf" download class="cv-button" data-lang-es="Descargar CV" data-lang-en="Download CV">Descargar CV</a></li>
+                    <li><a href="Abrahan_Chaurio_CV.pdf" data-lang-es="Descargar CV" data-lang-en="Download CV">Descargar CV</a></li>
                 </ul>
             </nav>
 
