--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                     <li><a href="https://platzi.com/p/Abrahanco/curso/11124-visualizacion-datos-bi/diploma/detalle/" target="_blank" rel="noopener noreferrer" class="contact-button" data-lang-es="Storytelling y Visualización de Datos" data-lang-en="Data Storytelling & Visualization">Storytelling y Visualización de Datos</a></li>
                     <li><a href="https://platzi.com/p/Abrahanco/curso/4822-excel-avanzado-datos/diploma/detalle/" target="_blank" rel="noopener noreferrer" class="contact-button" data-lang-es="Excel Avanzado (Macros, Power Query)" data-lang-en="Advanced Excel (Macros, Power Query)">Excel Avanzado (Macros, Power Query)</a></li>
                     <li><a href="https://platzi.com/p/Abrahanco/curso/11324-dbsql/diploma/detalle/" target="_blank" rel="noopener noreferrer" class="contact-button" data-lang-es="Analisis y Modelado de Datos con DAX para POwer BI" data-lang-en="Data Analysis and Modeling with DAX for Power BI">Analisis y Modelado de Datos con DAX para POwer BI</a></li>
-                    <li><span class="contact-button" data-lang-es="Resolución de Problemas Críticos" data-lang-en="Critical Problem Solving">Resolución de Problemas Críticos</span></li>
-                    <li><span class="contact-button" data-lang-es="Adaptabilidad y Resiliencia" data-lang-en="Adaptability & Resilience">Adaptabilidad y Resiliencia</span></li>
-                    <li><span class="contact-button" data-lang-es="Comunicación Estratégica" data-lang-en="Strategic Communication">Comunicación Estratégica</span></li>
+                    <li><a class="contact-button" data-lang-es="Resolución de Problemas Críticos" data-lang-en="Critical Problem Solving">Resolución de Problemas Críticos</a></li>
+                    <li><a class="contact-button" data-lang-es="Adaptabilidad y Resiliencia" data-lang-en="Adaptability & Resilience">Adaptabilidad y Resiliencia</a></li>
+                    <li><a class="contact-button" data-lang-es="Comunicación Estratégica" data-lang-en="Strategic Communication">Comunicación Estratégica</a></li>
                 </ul>
             </div>
             <a href="#portfolio" class="cta-button" data-lang-es="Ver mis Proyectos" data-lang-en="See My Projects">Ver mis Proyectos</a>
