--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             <h1 class="main-headline" data-lang-es="Abrahan Chaurio" data-lang-en="Abrahan Chaurio">Abrahan Chaurio</h1>
             <p class="sub-headline" data-lang-es="Business Intelligence & Data Analysis | Transformando Datos en Decisiones Estratégicas" data-lang-en="Business Intelligence & Data Analysis | Turning Data into Strategic Decisions">Business Intelligence & Data Analysis | Transformando Datos en Decisiones Estratégicas </p>
             <div class="bio-text">
-                <p data-lang-es="¡Hola! Soy Abrahan Chaurio (Abradang). Hace más de 18 años, SQL me mostró el poder de transformar datos en valor, pero mi camino para encontrar el encaje perfecto fue una exploración constante entre la tecnología (Informática) y el negocio (Administración, Emprendimiento)." data-lang-en="Hi! I'm Abrahan Chaurio (Abradang). Over 18 years ago, SQL showed me the power of transforming data into value, but my path to finding the perfect fit was a constant exploration between technology (Computer Science) and business (Administration, Entrepreneurship).">
-                    ¡Hola! Soy Abrahan Chaurio (Abradang). Hace más de 18 años, SQL me mostró el poder de transformar datos en valor, pero mi camino para encontrar el encaje perfecto fue una exploración constante entre la tecnología (Informática) y el negocio (Administración, Emprendimiento).
+                <p data-lang-es="¡Hola! Soy Abrahan Chaurio. Hace más de 18 años, SQL me mostró el poder de transformar datos en valor, pero mi camino para encontrar el encaje perfecto fue una exploración constante entre la tecnología (Informática) y el negocio (Administración, Emprendimiento)." data-lang-en="Hi! I'm Abrahan Chaurio. Over 18 years ago, SQL showed me the power of transforming data into value, but my path to finding the perfect fit was a constant exploration between technology (Computer Science) and business (Administration, Entrepreneurship).">
+                    ¡Hola! Soy Abrahan Chaurio. Hace más de 18 años, SQL me mostró el poder de transformar datos en valor, pero mi camino para encontrar el encaje perfecto fue una exploración constante entre la tecnología (Informática) y el negocio (Administración, Emprendimiento).
                 </p>
                 <p data-lang-es="El momento decisivo llegó durante una crisis de datos: tras días de análisis exhaustivo, no solo recuperamos información crítica (y millones para el negocio), sino que entendí mi verdadera vocación. El Business Intelligence era el puente que buscaba: donde la tecnología sirve al negocio, los datos cuentan historias y los problemas se convierten en oportunidades de mejora." data-lang-en="The defining moment came during a data crisis: after days of exhaustive analysis, we not only recovered critical information (and millions for the business), but I understood my true calling. Business Intelligence was the bridge I was looking for: where technology serves the business, data tells stories, and problems become opportunities for improvement.">
                     El momento decisivo llegó durante una crisis de datos: tras días de análisis exhaustivo, no solo recuperamos información crítica (y millones para el negocio), sino que entendí mi verdadera vocación. El Business Intelligence era el puente que buscaba: donde la tecnología sirve al negocio, los datos cuentan historias y los problemas se convierten en oportunidades de mejora.
@@ -80,9 +80,9 @@
                     <li><a href="https://platzi.com/p/Abrahanco/curso/11124-visualizacion-datos-bi/diploma/detalle/" target="_blank" rel="noopener noreferrer" class="contact-button" data-lang-es="Storytelling y Visualización de Datos" data-lang-en="Data Storytelling & Visualization">Storytelling y Visualización de Datos</a></li>
                     <li><a href="https://platzi.com/p/Abrahanco/curso/4822-excel-avanzado-datos/diploma/detalle/" target="_blank" rel="noopener noreferrer" class="contact-button" data-lang-es="Excel Avanzado (Macros, Power Query)" data-lang-en="Advanced Excel (Macros, Power Query)">Excel Avanzado (Macros, Power Query)</a></li>
                     <li><a href="https://platzi.com/p/Abrahanco/curso/11324-dbsql/diploma/detalle/" target="_blank" rel="noopener noreferrer" class="contact-button" data-lang-es="Analisis y Modelado de Datos con DAX para POwer BI" data-lang-en="Data Analysis and Modeling with DAX for Power BI">Analisis y Modelado de Datos con DAX para POwer BI</a></li>
-                    <li><span class="contact-button" data-lang-es="Resolución de Problemas Críticos" data-lang-en="Critical Problem Solving">Resolución de Problemas Críticos</span></li>
-                    <li><span class="contact-button" data-lang-es="Adaptabilidad y Resiliencia" data-lang-en="Adaptability & Resilience">Adaptabilidad y Resiliencia</span></li>
-                    <li><span class="contact-button" data-lang-es="Comunicación Estratégica" data-lang-en="Strategic Communication">Comunicación Estratégica</span></li>
+                    <li><a class="contact-button" data-lang-es="Resolución de Problemas Críticos" data-lang-en="Critical Problem Solving">Resolución de Problemas Críticos</a></li>
+                    <li><a class="contact-button" data-lang-es="Adaptabilidad y Resiliencia" data-lang-en="Adaptability & Resilience">Adaptabilidad y Resiliencia</a></li>
+                    <li><a class="contact-button" data-lang-es="Comunicación Estratégica" data-lang-en="Strategic Communication">Comunicación Estratégica</a></li>
                 </ul>
             </div>
             <a href="#portfolio" class="cta-button" data-lang-es="Ver mis Proyectos" data-lang-en="See My Projects">Ver mis Proyectos</a>
@@ -126,9 +126,6 @@
             <a href="https://github.com/abradang" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="GitHub"><img src="icons/github-icon.png" alt="GitHub"></a>
         </div>
         <p data-lang-es="&copy; {year} Abrahan Chaurio. Todos los derechos reservados." data-lang-en="&copy; {year} Abrahan Chaurio. All rights reserved.">&copy; <span id="current-year"></span> Abrahan Chaurio. Todos los derechos reservados.</p>
-        <div class="attribution">
-             Icons made by <a href="https://www.freepik.com" title="Freepik" target="_blank" rel="noopener noreferrer">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a>
-        </div>
     </footer>
 
     <script>
