--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
 
         <section id="contact" class="section-padding">
             <h2 data-lang-es="Contacto" data-lang-en="Contact">Contacto</h2>
-            <p class="text-center" data-lang-es="¿Interesado/a en colaborar o saber más? Conectemos." data-lang-en="Interested in collaborating or learning more? Let's connect.">¿Interesado/a en colaborar o saber más? Conectemos.</p>
+            <p class="text-center" data-lang-es="¿Tienes un desafío de datos, una oportunidad de colaboración o una propuesta interesante? Me encantaría escucharla. Soy directo y me muevo rápido. Envíame un mensaje y busquemos la forma de generar impacto juntos." data-lang-en="Got a data challenge, a collaboration opportunity, or an interesting proposal? I'd love to hear about it. I'm direct and move fast. Send me a message, and let's find a way to make an impact together.">¿Tienes un desafío de datos, una oportunidad de colaboración o una propuesta interesante? Me encantaría escucharla. Soy directo y me muevo rápido. Envíame un mensaje y busquemos la forma de generar impacto juntos.</p>
             <div class="contact-links">
-                 <a href="https://www.linkedin.com/in/abrahanchaurio/" target="_blank" rel="noopener noreferrer" class="contact-button">LinkedIn</a>
+                 <a href="https://wa.me/34643068374" target="_blank" rel="noopener noreferrer" class="contact-button">WhatsApp</a>
                  <a href="mailto:abrahanco@gmail.com" class="contact-button" data-lang-es="Enviar Email" data-lang-en="Send Email">Enviar Email</a>
             </div>
         </section>
