--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <section id="home-about" class="text-center section-padding">
             <img src="Bondi11.png" alt="Foto de Abrahan Chaurio" class="profile-pic">
             <h1 class="main-headline" data-lang-es="Abrahan Chaurio" data-lang-en="Abrahan Chaurio">Abrahan Chaurio</h1>
-            <p class="sub-headline" data-lang-es="Business Intelligence & Data Analysis | Transformando Datos en Decisiones Estratégicas" data-lang-en="Business Intelligence & Data Analysis | Turning Data into Strategic Decisions">Business Intelligence & Data Analysis | Transformando Datos en Decisiones Estratégicas </p>
+            <p class="sub-headline" data-lang-es="Business Intelligence & Data Analyst | Transformando Datos en Decisiones Estratégicas" data-lang-en="Business Intelligence & Data Analyst | Turning Data into Strategic Decisions">Business Intelligence & Data Analyst | Transformando Datos en Decisiones Estratégicas </p>
             <div class="bio-text">
                  <p data-lang-es="¡Hola! Soy Abrahan Chaurio. Hace más de 18 años, SQL me mostró el poder de transformar datos en valor, pero mi camino para encontrar el encaje perfecto fue una exploración constante entre la tecnología (Informática) y el negocio (Administración, Emprendimiento)." data-lang-en="Hi! I'm Abrahan Chaurio. Over 18 years ago, SQL showed me the power of transforming data into value, but my path to finding the perfect fit was a constant exploration between technology (Computer Science) and business (Administration, Entrepreneurship).">¡Hola! Soy Abrahan Chaurio. Hace más de 18 años, SQL me mostró el poder de transformar datos en valor, pero mi camino para encontrar el encaje perfecto fue una exploración constante entre la tecnología (Informática) y el negocio (Administración, Emprendimiento).</p>
                  <p data-lang-es="El momento decisivo llegó durante una crisis de datos: tras días de análisis exhaustivo, no solo recuperamos información crítica (y millones para el negocio), sino que entendí mi verdadera vocación. El Business Intelligence era el puente que buscaba: donde la tecnología sirve al negocio, los datos cuentan historias y los problemas se convierten en oportunidades de mejora." data-lang-en="The defining moment came during a data crisis: after days of exhaustive analysis, we not only recovered critical information (and millions for the business), but I understood my true calling. Business Intelligence was the bridge I was looking for: where technology serves the business, data tells stories, and problems become opportunities for improvement.">El momento decisivo llegó durante una crisis de datos: tras días de análisis exhaustivo, no solo recuperamos información crítica (y millones para el negocio), sino que entendí mi verdadera vocación. El Business Intelligence era el puente que buscaba: donde la tecnología sirve al negocio, los datos cuentan historias y los problemas se convierten en oportunidades de mejora.</p>
@@ -209,7 +209,7 @@
         </section>
 
     </main>
-
+F
     <footer>
         <div class="social-icons">
             <a href="https://www.linkedin.com/in/abrahanchaurio/" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="LinkedIn"><img src="icons/linkedin-icon.png" alt="LinkedIn"></a>
