--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
     <header>
         <div class="header-container">
+            <a href="#" class="logo-link" aria-label="Abradang - Inicio">
+                <img src="icons/AAZUL.svg" alt="Logo Abradang" class="logo-image icon-light">
+                <img src="icons/AYellow.svg" alt="Logo Abradang" class="logo-image icon-dark">
+            </a>
             <nav class="main-nav" aria-label="Navegación principal">
                 <ul>
                     <li><a href="#home-about" data-lang-es="Acerca de mí" data-lang-en="About Me">Acerca de mí</a></li>
