--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <header>
         <div class="header-container">
             <a href="#" class="logo-link" aria-label="Abradang - Inicio">
-                <img src="icons/AAZUL.svg" alt="Logo Abradang" class="logo-image icon-light">
-                <img src="icons/AYellow.svg" alt="Logo Abradang" class="logo-image icon-dark">
+                <img src="icons/AAZUL2.svg" alt="Logo Abradang" class="logo-image icon-light">
+                <img src="icons/AYellow2.svg" alt="Logo Abradang" class="logo-image icon-dark">
             </a>
             <nav class="main-nav" aria-label="Navegación principal">
                 <ul>
